Actions
Bug #8281
closeducbcmd/ls: misleading-indentation
Start date:
2017-05-28
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build error with gcc 6:
ls.c:391:7: error: this 'if' clause does not guard... [-Werror=misleading-indentation] if ((stb1.st_mode & ~S_IFMT) ^~ ls.c:394:8: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if' break; ^~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk about 5 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit c193478586214940af708897e19c9a878b6a6223
commit c193478586214940af708897e19c9a878b6a6223 Author: Toomas Soome <tsoome@me.com> Date: 2017-06-02T17:48:01.000Z 8281 ucbcmd/ls: misleading-indentation Reviewed by: Yuri Pankov <yuripv@gmx.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions